feat: add docs prettier formatter to lint-docs step

--- a/package.json
+++ b/package.json
@@ -89,11 +89,12 @@
     "build": "tsc",
     "debug:bin": "ts-node src/cli.ts",
     "lint": "eslint . bin/rdme bin/set-version-output --ext .js,.ts",
-    "lint-docs": "alex .",
+    "lint-docs": "alex . && npm run prettier",
     "prebuild": "rm -rf dist/",
     "prepack": "npm run build",
     "pretest": "npm run lint && npm run lint-docs",
-    "prettier": "prettier --list-different --write \"./**/**.{js,ts}\"",
+    "prettier": "prettier --list-different \"./**/**.{md,js,ts}\"",
+    "prettier:write": "prettier --list-different --write \"./**/**.{md,js,ts}\"",
     "release": "npx conventional-changelog-cli -i CHANGELOG.md -s",
     "test": "jest --coverage"
   },
