--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,7 @@
     "outDir": "dist/",
     "paths": {
       "@npmcli/ci-detect": [".sink.d.ts"],
-      "editor": [".sink.d.ts"],
-      "oas-normalize": [".sink.d.ts"]
+      "editor": [".sink.d.ts"]
     },
     "resolveJsonModule": true,
     "target": "ES5"
