--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,10 +1,7 @@
 name: Sync `documentation` directory to ReadMe
 
-# Run workflow for every push to the `main` branch
-on:
-  push:
-    branches:
-      - main
+# Run workflow for every push
+on: push
 
 jobs:
   sync:
@@ -44,7 +41,17 @@ jobs:
       # we run the `rdme` GitHub Action to sync the Markdown file
       # in the `documentation` directory.
       # Here's the page we're syncing: https://docs.readme.com/docs/rdme
+
+      # First we're going to perform a dry run of syncing process.
+      # We do this on every push to ensure that an actual sync will work properly
+      - name: Sync docs to ReadMe (dry run)
+        uses: ./
+        with:
+          rdme: docs ./documentation --key=${{ secrets.README_DEVELOPERS_API_KEY }} --version=2.0 --dryRun
+
+      # And finally, we perform an actual sync to ReadMe if we're on the main branch
       - name: Sync docs to ReadMe
+        if: github.event_name == 'push' && github.event.ref == 'refs/heads/main'
         # We use the `main` branch as ref for GitHub Action
         # This is NOT recommended, as it can break your workflows without notice!
         # We recommend specifying a fixed version, i.e. @7.0
