--- a/action.yml
+++ b/action.yml
@@ -12,7 +12,7 @@ runs:
   using: composite
   steps:
     - name: Set up rdme
-      run: npm install --silent && npm run build
+      run: npm install --silent --no-save && npm run build --silent
       shell: bash
       working-directory: ${{ github.action_path }}
     - name: Execute rdme command
