--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "enquirer": "^2.3.0",
     "form-data": "^4.0.0",
     "gray-matter": "^4.0.1",
+    "ignore": "^5.2.0",
     "isemail": "^3.1.3",
     "mime-types": "^2.1.35",
     "node-fetch": "^2.6.1",
