--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "open": "^8.2.1",
     "ora": "^5.4.1",
     "parse-link-header": "^2.0.0",
+    "prompts": "^2.4.2",
     "read": "^1.0.7",
     "semver": "^7.0.0",
     "tmp-promise": "^3.0.2",
@@ -71,6 +72,7 @@
     "@types/mime-types": "^2.1.1",
     "@types/node-fetch": "^2.6.2",
     "@types/parse-link-header": "^2.0.0",
+    "@types/prompts": "^2.0.14",
     "@types/read": "^0.0.29",
     "@types/semver": "^7.3.10",
     "@types/tmp": "^0.2.3",
