--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@types/jest": "^28.1.6",
     "@types/mime-types": "^2.1.1",
     "@types/node-fetch": "^2.6.2",
+    "@types/npmcli__ci-detect": "^2.0.0",
     "@types/parse-link-header": "^2.0.0",
     "@types/read": "^0.0.29",
     "@types/semver": "^7.3.10",
