--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "enquirer": "^2.3.0",
     "form-data": "^4.0.0",
     "gray-matter": "^4.0.1",
+    "ignore": "^5.2.0",
     "isemail": "^3.1.3",
     "mime-types": "^2.1.35",
     "node-fetch": "^2.6.1",
@@ -54,6 +55,7 @@
     "open": "^8.2.1",
     "ora": "^5.4.1",
     "parse-link-header": "^2.0.0",
+    "prompts": "^2.4.2",
     "read": "^1.0.7",
     "semver": "^7.0.0",
     "tmp-promise": "^3.0.2",
@@ -71,6 +73,7 @@
     "@types/node-fetch": "^2.6.2",
     "@types/npmcli__ci-detect": "^2.0.0",
     "@types/parse-link-header": "^2.0.0",
+    "@types/prompts": "^2.0.14",
     "@types/read": "^0.0.29",
     "@types/semver": "^7.3.10",
     "@types/tmp": "^0.2.3",
