feat: porting over the `oas-reducer` CLI into a new `openapi:reduce` command

--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
     "form-data": "^4.0.0",
     "gray-matter": "^4.0.1",
     "ignore": "^5.2.0",
+    "jsonpath": "^1.1.1",
     "mime-types": "^2.1.35",
     "node-fetch": "^2.6.1",
+    "oas": "^18.4.2",
     "oas-normalize": "^7.0.0",
     "open": "^8.2.1",
     "ora": "^5.4.1",
@@ -67,6 +69,7 @@
     "@types/command-line-usage": "^5.0.2",
     "@types/config": "^3.3.0",
     "@types/jest": "^28.1.6",
+    "@types/jsonpath": "^0.2.0",
     "@types/mime-types": "^2.1.1",
     "@types/node-fetch": "^2.6.2",
     "@types/npmcli__ci-detect": "^2.0.0",
