--- a/package.json
+++ b/package.json
@@ -44,11 +44,9 @@
     "configstore": "^5.0.0",
     "debug": "^4.3.3",
     "editor": "^1.0.0",
-    "enquirer": "^2.3.0",
     "form-data": "^4.0.0",
     "gray-matter": "^4.0.1",
     "ignore": "^5.2.0",
-    "isemail": "^3.1.3",
     "mime-types": "^2.1.35",
     "node-fetch": "^2.6.1",
     "oas-normalize": "^7.0.0",
@@ -56,10 +54,10 @@
     "ora": "^5.4.1",
     "parse-link-header": "^2.0.0",
     "prompts": "^2.4.2",
-    "read": "^1.0.7",
     "semver": "^7.0.0",
     "tmp-promise": "^3.0.2",
-    "update-notifier": "^5.1.0"
+    "update-notifier": "^5.1.0",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@readme/eslint-config": "^10.0.0",
@@ -74,10 +72,10 @@
     "@types/npmcli__ci-detect": "^2.0.0",
     "@types/parse-link-header": "^2.0.0",
     "@types/prompts": "^2.0.14",
-    "@types/read": "^0.0.29",
     "@types/semver": "^7.3.10",
     "@types/tmp": "^0.2.3",
     "@types/update-notifier": "^6.0.1",
+    "@types/validator": "^13.7.5",
     "alex": "^10.0.0",
     "eslint": "^8.21.0",
     "jest": "^28.1.1",
@@ -91,7 +89,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "debug:bin": "ts-node src/cli.ts",
+    "debug": "ts-node src/cli.ts",
     "lint": "eslint . bin/rdme bin/set-version-output --ext .js,.ts",
     "lint-docs": "alex . && npm run prettier",
     "prebuild": "rm -rf dist/",
