refactor: better command string construction
i like this way just in case the opts string is empty (which is unlikely but w/e)

--- a/src/lib/createGHA/base.yml
+++ b/src/lib/createGHA/base.yml
@@ -20,4 +20,4 @@ jobs:
       - name: Run `:[](command)` command
         uses: readmeio/rdme@:[](rdmeVersion)
         with:
-          rdme: :[](command) :[](optsString)
+          rdme: :[](commandString)
