--- a/src/lib/createGHA/base.yml
+++ b/src/lib/createGHA/base.yml
@@ -5,19 +5,19 @@ name: ReadMe GitHub Action 🦉
 on:
   push:
     branches:
-      # You can add more branches by duplicating this line below
-      # for each branch you'd like to add!
+      # This workflow will run every time you push code to the `:[](branch)` branch.
+      # Check out GitHub's docs for more info on configuring this:
+      # https://docs.github.com/actions/using-workflows/events-that-trigger-workflows
       - :[](branch)
 
 jobs:
-  simple:
-    name: My First GitHub Action
+  rdme-:[](command):
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout GitHub Action
+      - name: Check out repo 📚
         uses: actions/checkout@v3
 
-      - name: Run `:[](command)` command
+      - name: Run `:[](command)` command 🚀
         uses: readmeio/rdme@:[](rdmeVersion)
         with:
           rdme: :[](commandString)
