--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "parse-link-header": "^2.0.0",
     "prompts": "^2.4.2",
     "semver": "^7.0.0",
+    "simple-git": "^3.13.0",
     "tmp-promise": "^3.0.2",
     "update-notifier": "^5.1.0",
     "validator": "^13.7.0"
