--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "validator": "^13.7.0"
   },
   "devDependencies": {
+    "@readme/better-ajv-errors": "^1.5.0",
     "@readme/eslint-config": "^10.0.0",
     "@readme/oas-examples": "^5.3.0",
     "@types/cli-table": "^0.3.0",
@@ -81,10 +82,12 @@
     "@types/tmp": "^0.2.3",
     "@types/update-notifier": "^6.0.1",
     "@types/validator": "^13.7.5",
+    "ajv": "^8.11.0",
     "alex": "^10.0.0",
     "eslint": "^8.21.0",
     "jest": "^28.1.1",
     "jest-extended": "^3.0.2",
+    "js-yaml": "^4.1.0",
     "nock": "^13.2.7",
     "prettier": "^2.7.1",
     "ts-jest": "^28.0.7",
