chore: different language
updating tests and snapshots

--- a/src/lib/createGHA/base.yml
+++ b/src/lib/createGHA/base.yml
@@ -5,7 +5,7 @@ name: ReadMe GitHub Action 🦉
 on:
   push:
     branches:
-      # This workflow will run every time you push code to the `:[](branch)` branch.
+      # This workflow will run every time you push code to the following branch: `:[](branch)`
       # Check out GitHub's docs for more info on configuring this:
       # https://docs.github.com/actions/using-workflows/events-that-trigger-workflows
       - :[](branch)
