--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,9 @@ jobs:
           node-version: 12
 
       - name: Install deps
-        run: npm ci
+        run: |
+          npm ci
+          npm remove jest-extended
 
       - name: Build dist
         run: npm run build
