--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "editor": "^1.0.0",
     "form-data": "^4.0.0",
     "gray-matter": "^4.0.1",
+    "hercule": "^5.1.3",
     "ignore": "^5.2.0",
     "jsonpath": "^1.1.1",
     "mime-types": "^2.1.35",
@@ -57,11 +58,13 @@
     "parse-link-header": "^2.0.0",
     "prompts": "^2.4.2",
     "semver": "^7.0.0",
+    "simple-git": "^3.13.0",
     "tmp-promise": "^3.0.2",
     "update-notifier": "^5.1.0",
     "validator": "^13.7.0"
   },
   "devDependencies": {
+    "@readme/better-ajv-errors": "^1.5.0",
     "@readme/eslint-config": "^10.1.0",
     "@readme/oas-examples": "^5.3.0",
     "@types/cli-table": "^0.3.0",
@@ -79,10 +82,12 @@
     "@types/tmp": "^0.2.3",
     "@types/update-notifier": "^6.0.1",
     "@types/validator": "^13.7.6",
+    "ajv": "^8.11.0",
     "alex": "^10.0.0",
     "eslint": "^8.23.0",
     "jest": "^28.1.1",
     "jest-extended": "^3.0.0",
+    "js-yaml": "^4.1.0",
     "nock": "^13.2.7",
     "prettier": "^2.7.1",
     "ts-jest": "^28.0.8",
