--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rdme",
-  "version": "7.5.0",
+  "version": "8.0.0-beta.1",
   "description": "ReadMe's official CLI and GitHub Action wrapper.",
   "license": "MIT",
   "author": "ReadMe <support@readme.io> (https://readme.com)",
