--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3
 
       # This is a simple example that runs our `validate` command on a local file.
-      - name: Run `validate` command
+      - name: Run `openapi:validate` command
         uses: ./ # in actual production usage, this value should be 'readmeio/rdme@XX'
         with:
-          rdme: validate __tests__/__fixtures__/ref-oas/petstore.json
+          rdme: openapi:validate __tests__/__fixtures__/ref-oas/petstore.json
