fix(docs): don't use beta tag (#599)
* fix(docs): don't use beta tag

* chore: update GHA copy

* chore: smol cleanups

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -10,13 +10,16 @@ jobs:
       - name: Checkout this repo
         uses: actions/checkout@v3
 
+      - name: Install and build rdme deps
+        run: npm ci && npm run build
+
       # Let's dynamically update our docs with the latest version of rdme!
       # Note that these next three steps are not required
       # in order to sync your docs to ReadMe.
 
       # First, we run a script that sets a few outputs:
       # our package version and our Node.js version.
-      - name: Retrieve version values from package.json
+      - name: Retrieve version values
         id: rdme-version
         run: ./bin/set-version-output
 
