--- a/package.json
+++ b/package.json
@@ -98,15 +98,14 @@
   "scripts": {
     "build": "tsc",
     "debug": "ts-node src/cli.ts",
-    "lint": "eslint . bin/rdme bin/set-version-output --ext .js,.ts",
+    "lint": "eslint . bin/rdme bin/set-version-output --fix --ext .js,.ts",
     "lint-docs": "alex . && npm run prettier",
     "prebuild": "rm -rf dist/",
     "prepack": "npm run build",
-    "pretest": "npm run lint && npm run lint-docs",
     "prettier": "prettier --list-different \"./**/**.{md,js,ts}\"",
     "prettier:write": "prettier --list-different --write \"./**/**.{md,js,ts}\"",
     "release": "npx conventional-changelog-cli -i CHANGELOG.md -s",
-    "test": "jest --coverage"
+    "test": "jest --coverage --updateSnapshot"
   },
   "prettier": "@readme/eslint-config/prettier"
 }
