--- a/package.json
+++ b/package.json
@@ -71,6 +71,8 @@
     "@types/command-line-args": "^5.2.0",
     "@types/command-line-usage": "^5.0.2",
     "@types/config": "^3.3.0",
+    "@types/configstore": "^6.0.0",
+    "@types/debug": "^4.1.7",
     "@types/jest": "^28.1.6",
     "@types/jsonpath": "^0.2.0",
     "@types/mime-types": "^2.1.1",
