--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "semver": "^7.0.0",
     "simple-git": "^3.13.0",
     "tmp-promise": "^3.0.2",
-    "update-notifier": "^5.1.0",
+    "update-notifier-cjs": "^5.1.5",
     "validator": "^13.7.0"
   },
   "devDependencies": {
@@ -69,6 +69,8 @@
     "@types/command-line-args": "^5.2.0",
     "@types/command-line-usage": "^5.0.2",
     "@types/config": "^3.3.0",
+    "@types/configstore": "^6.0.0",
+    "@types/debug": "^4.1.7",
     "@types/jest": "^28.1.6",
     "@types/jsonpath": "^0.2.0",
     "@types/mime-types": "^2.1.1",
@@ -78,10 +80,8 @@
     "@types/prompts": "^2.0.14",
     "@types/semver": "^7.3.12",
     "@types/tmp": "^0.2.3",
-    "@types/update-notifier": "^6.0.1",
     "@types/validator": "^13.7.6",
     "ajv": "^8.11.0",
-    "alex": "^10.0.0",
     "eslint": "^8.23.0",
     "jest": "^28.1.1",
     "jest-extended": "^3.0.0",
@@ -97,7 +97,7 @@
     "build": "tsc",
     "debug": "ts-node src/cli.ts",
     "lint": "eslint . bin/rdme bin/set-version-output --ext .js,.ts",
-    "lint-docs": "alex . && npm run prettier",
+    "lint-docs": "npx alex@10 . && npm run prettier",
     "prebuild": "rm -rf dist/",
     "prepack": "npm run build",
     "pretest": "npm run lint && npm run lint-docs",
