--- a/packages/create/package.json
+++ b/packages/create/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@readme/create",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Sync your OpenAPI definition to ReadMe",
-  "bin": "npx rdme@next openapi --github",
+  "bin": "./bin/create.sh",
   "repository": {
     "type": "git",
     "url": "https://github.com/readmeio/rdme.git",
