--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
     "debug": "ts-node src/cli.ts",
     "lint": "eslint . bin/rdme bin/set-version-output --ext .js,.ts",
     "lint-docs": "npx alex@10 . && npm run prettier",
-    "postversion": "git tag $(npm pkg get version | tr -d '\"')",
+    "postversion": "git tag $npm_package_version",
     "prebuild": "rm -rf dist/",
     "prepack": "npm run build",
     "pretest": "npm run lint && npm run lint-docs",
@@ -107,7 +107,7 @@
     "prettier:write": "prettier --list-different --write \"./**/**.{md,js,ts}\"",
     "release": "npx conventional-changelog-cli -i CHANGELOG.md -s",
     "test": "jest --coverage",
-    "version": "npm run release && git add ."
+    "version": "npm run release && git add CHANGELOG.md"
   },
   "prettier": "@readme/eslint-config/prettier"
 }
