--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
     "@types/config": "^3.3.0",
     "@types/configstore": "^6.0.0",
     "@types/debug": "^4.1.7",
-    "@types/jest": "^28.1.6",
+    "@types/jest": "^29.1.1",
+    "@types/js-yaml": "^4.0.5",
     "@types/jsonpath": "^0.2.0",
     "@types/mime-types": "^2.1.1",
     "@types/node-fetch": "^2.6.2",
@@ -83,12 +84,12 @@
     "@types/validator": "^13.7.6",
     "ajv": "^8.11.0",
     "eslint": "^8.23.0",
-    "jest": "^28.1.1",
+    "jest": "^29.0.3",
     "jest-extended": "^3.0.0",
     "js-yaml": "^4.1.0",
     "nock": "^13.2.7",
     "prettier": "^2.7.1",
-    "ts-jest": "^28.0.8",
+    "ts-jest": "^29.0.0",
     "ts-node": "^10.9.1",
     "type-fest": "^3.0.0",
     "typescript": "^4.8.2"
