--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Run `openapi:validate` command
         uses: ./rdme-repo/
         with:
-          rdme: openapi:validate oas-examples-repo/3.1/json/petstore.json
+          rdme: openapi:validate rdme-repo/__tests__/__fixtures__/very-invalid-oas.json
 
       # Docs: https://rdme-test.readme.io
       - name: Run `openapi` command
