--- a/action.yml
+++ b/action.yml
@@ -18,3 +18,5 @@ runs:
     - name: Execute rdme command
       run: ${{ github.action_path }}/bin/rdme ${{ inputs.rdme }}
       shell: bash
+      env:
+        FORCE_COLOR: '1'
