--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rdme",
   "version": "8.0.0-beta.9",
-  "description": "ReadMe's official CLI and GitHub Action wrapper.",
+  "description": "ReadMe's official CLI and GitHub Action.",
   "license": "MIT",
   "author": "ReadMe <support@readme.io> (https://readme.com)",
   "engines": {
