--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "jest": "^29.0.3",
     "jest-extended": "^3.0.0",
     "js-yaml": "^4.1.0",
+    "keyv": "^4.5.0",
     "nock": "^13.2.7",
     "prettier": "^2.7.1",
     "ts-jest": "^29.0.0",
