ci(prettier): only scan md files
ESLint already covers JS/TS, so the duplicative check is not necessary

--- a/package.json
+++ b/package.json
@@ -100,12 +100,13 @@
     "bump": "npm version -m 'build: %s release'",
     "debug": "ts-node src/cli.ts",
     "lint": "eslint . bin/rdme bin/set-version-output --ext .js,.ts",
-    "lint-docs": "npx alex@10 . && npm run prettier",
+    "lint-docs": "npx alex@10 . && npm run prettier:docs",
     "postversion": "git tag $npm_package_version",
     "prebuild": "rm -rf dist/",
     "prepack": "npm run build",
     "pretest": "npm run lint && npm run lint-docs",
     "prettier": "prettier --list-different \"./**/**.{md,js,ts}\"",
+    "prettier:docs": "prettier --list-different \"./**/**.md\"",
     "prettier:write": "prettier --list-different --write \"./**/**.{md,js,ts}\"",
     "release": "npx conventional-changelog-cli -i CHANGELOG.md -s",
     "test": "jest --coverage",
