--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "jest": "^29.0.3",
     "jest-extended": "^3.0.0",
     "js-yaml": "^4.1.0",
+    "keyv": "^4.5.0",
     "nock": "^13.2.7",
     "prettier": "^2.7.1",
     "ts-jest": "^29.0.0",
@@ -99,12 +100,13 @@
     "bump": "npm version -m 'build: %s release'",
     "debug": "ts-node src/cli.ts",
     "lint": "eslint . bin/rdme bin/set-version-output --ext .js,.ts",
-    "lint-docs": "npx alex@10 . && npm run prettier",
+    "lint-docs": "npx alex@10 . && npm run prettier:docs",
     "postversion": "git tag $npm_package_version",
     "prebuild": "rm -rf dist/",
     "prepack": "npm run build",
     "pretest": "npm run lint && npm run lint-docs",
     "prettier": "prettier --list-different \"./**/**.{md,js,ts}\"",
+    "prettier:docs": "prettier --list-different \"./**/**.md\"",
     "prettier:write": "prettier --list-different --write \"./**/**.{md,js,ts}\"",
     "release": "npx conventional-changelog-cli -i CHANGELOG.md -s",
     "test": "jest --coverage",
