refactor(createGHA): drop hercule in favor of native solution (#660)
* refactor(createGHA): drop hercule in favor of native solution

* chore: small tsconfig cleanup

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,7 @@
     "noImplicitAny": true,
     "outDir": "dist/",
     "paths": {
-      "editor": [".sink.d.ts"],
-      "hercule/promises": [".sink.d.ts"]
+      "editor": [".sink.d.ts"]
     },
     "resolveJsonModule": true,
     "target": "ES5"
