ci: extending ci to run tests on windows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,12 @@ on:
 jobs:
   build:
     name: Test Suite
+    runs-on: ${{ matrix.os }}
     runs-on: ubuntu-latest
     strategy:
+      os:
+        - ubuntu-latest
+        - windows-latest
       matrix:
         node-version:
           - 14
