--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,12 +14,12 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
-          - windows-latest
+          # - windows-latest
         node-version:
           - 14
-          - 16
-          - 18
-          - 19
+          # - 16
+          # - 18
+          # - 19
 
     steps:
       - uses: actions/checkout@v3
