--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,8 +13,8 @@ jobs:
     strategy:
       matrix:
         os:
-          - ubuntu-latest
-          # - windows-latest
+          # - ubuntu-latest
+          - windows-latest
         node-version:
           - 14
           # - 16
