feat: adding support for Postman collections

--- a/package.json
+++ b/package.json
@@ -12,19 +12,20 @@
   },
   "keywords": [
     "api",
+    "apidoc",
     "apis",
-    "openapi",
-    "swagger",
-    "openapi initiative",
-    "openapi specification",
-    "openapi spec",
-    "openapi document",
+    "documentation",
+    "microservice",
     "oai",
     "oas",
-    "apidoc",
-    "microservice",
-    "documentation",
-    "readme"
+    "openapi",
+    "openapi document",
+    "openapi initiative",
+    "openapi spec",
+    "openapi specification",
+    "postman",
+    "readme",
+    "swagger"
   ],
   "repository": {
     "type": "git",
@@ -50,7 +51,7 @@
     "mime-types": "^2.1.35",
     "node-fetch": "^2.6.1",
     "oas": "^20.0.0",
-    "oas-normalize": "^7.1.0",
+    "oas-normalize": "^8.1.0",
     "open": "^8.2.1",
     "ora": "^5.4.1",
     "parse-link-header": "^2.0.0",
