--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "ora": "^5.4.1",
     "parse-link-header": "^2.0.0",
     "prompts": "^2.4.2",
+    "rdme": "^8.0.4",
     "semver": "^7.0.0",
     "simple-git": "^3.13.0",
     "tmp-promise": "^3.0.2",
