--- a/__tests__/.eslintrc
+++ b/__tests__/.eslintrc
@@ -1,3 +1,8 @@
 {
-  "extends": ["@readme/eslint-config/testing"]
+  "extends": "@readme/eslint-config/testing",
+  "rules": {
+    "jest/expect-expect": ["error", {
+      "assertFunctionNames": ["expect", "expectOSAgnostic"]
+    }]
+  }
 }
