--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
   },
   "dependencies": {
     "@actions/core": "^1.6.0",
-    "@npmcli/ci-detect": "^3.0.0",
     "chalk": "^4.1.2",
+    "ci-info": "^3.6.1",
     "command-line-args": "^5.2.0",
     "command-line-usage": "^6.0.2",
     "config": "^3.1.0",
@@ -76,7 +76,6 @@
     "@types/jsonpath": "^0.2.0",
     "@types/mime-types": "^2.1.1",
     "@types/node-fetch": "^2.6.2",
-    "@types/npmcli__ci-detect": "^2.0.0",
     "@types/parse-link-header": "^2.0.0",
     "@types/prompts": "^2.0.14",
     "@types/semver": "^7.3.12",
