--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Sync docs to ReadMe (dry run)
         uses: ./
         with:
-          rdme: docs ./documentation --key=${{ secrets.README_DEVELOPERS_API_KEY }} --version=3.0 --dryRun
+          rdme: docs ./documentation --key=${{ secrets.README_DEVELOPERS_API_KEY }} --version=${{ secrets.README_DEVELOPERS_MAIN_VERSION }} --dryRun
 
       # And finally, we perform an actual sync to ReadMe if we're on the main branch
       - name: Sync docs to ReadMe
@@ -61,4 +61,4 @@ jobs:
         # Docs: https://docs.github.com/actions/using-workflows/workflow-syntax-for-github-actions#example-using-versioned-actions
         uses: readmeio/rdme@main
         with:
-          rdme: docs ./documentation --key=${{ secrets.README_DEVELOPERS_API_KEY }} --version=3.0
+          rdme: docs ./documentation --key=${{ secrets.README_DEVELOPERS_API_KEY }} --version=${{ secrets.README_DEVELOPERS_MAIN_VERSION }}
