refactor: rename files
This consolidates getNodeVersion into another file and renames the set-version-output function to have a .js extension so we don't need to have weird `npm run lint` carveouts for it

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,7 @@
   },
   "overrides": [
     {
-      "files": ["bin/set-version-output", "config/*.js"],
+      "files": ["bin/set-version-output.js", "config/*.js"],
       "rules": {
         "@typescript-eslint/no-var-requires": "off"
       }
