feat: create file for tagging version

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,7 @@
   },
   "overrides": [
     {
-      "files": ["bin/set-version-output.js", "config/*.js"],
+      "files": ["bin/set-version-output.js", "bin/set-major-version-tag.js", "config/*.js"],
       "rules": {
         "@typescript-eslint/no-var-requires": "off"
       }
