--- a/package.json
+++ b/package.json
@@ -97,15 +97,16 @@
     "build": "tsc",
     "bump": "npm version -m 'build: %s release'",
     "debug": "ts-node src/cli.ts",
-    "lint": "eslint . bin/rdme bin/set-version-output --ext .js,.ts",
+    "lint": "eslint . bin/rdme --ext .js,.ts",
     "lint-docs": "npx alex . && npm run prettier:docs",
-    "postversion": "git tag $npm_package_version",
+    "postversion": "git tag $npm_package_version && ./bin/set-major-version-tag.js",
     "prebuild": "rm -rf dist/",
     "prepack": "npm run build",
     "pretest": "npm run lint && npm run lint-docs",
     "prettier": "prettier --list-different \"./**/**.{md,js,ts}\"",
     "prettier:docs": "prettier --list-different \"./**/**.md\"",
     "prettier:write": "prettier --list-different --write \"./**/**.{md,js,ts}\"",
+    "preversion": "npm ci && npm run build",
     "release": "npx conventional-changelog-cli -i CHANGELOG.md -s",
     "test": "jest --coverage",
     "version": "npm run release && git add CHANGELOG.md"
