--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "gray-matter": "^4.0.1",
     "ignore": "^5.2.0",
     "jsonpath": "^1.1.1",
+    "jsonpath-plus": "^7.2.0",
     "mime-types": "^2.1.35",
     "node-fetch": "^2.6.1",
     "oas": "^20.0.0",
@@ -55,9 +56,11 @@
     "open": "^8.2.1",
     "ora": "^5.4.1",
     "parse-link-header": "^2.0.0",
+    "pluralize": "^8.0.0",
     "prompts": "^2.4.2",
     "semver": "^7.0.0",
     "simple-git": "^3.13.0",
+    "table": "^6.8.1",
     "tmp-promise": "^3.0.2",
     "update-notifier-cjs": "^5.1.5",
     "validator": "^13.7.0"
@@ -77,6 +80,7 @@
     "@types/mime-types": "^2.1.1",
     "@types/node-fetch": "^2.6.2",
     "@types/parse-link-header": "^2.0.0",
+    "@types/pluralize": "^0.0.29",
     "@types/prompts": "^2.0.14",
     "@types/semver": "^7.3.12",
     "@types/tmp": "^0.2.3",
