feat: adding `--feature` args to `openapi:uses`

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "downlevelIteration": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
-    "lib": ["es2020"],
+    "lib": ["es2020", "ES2021.Intl"],
     "noImplicitAny": true,
     "outDir": "dist/",
     "paths": {
