--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "prettier:write": "prettier --list-different --write \"./**/**.{md,js,ts}\"",
     "preversion": "npm ci && npm run build",
     "release": "npx conventional-changelog-cli -i CHANGELOG.md -s",
+    "release:gh": "gh release create $npm_package_version --draft --generate-notes",
     "test": "jest --coverage",
     "version": "npm run release && git add CHANGELOG.md"
   },
