--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
     "bump": "npm version -m 'build: %s release'",
     "debug": "ts-node src/cli.ts",
     "lint": "eslint . bin/rdme --ext .js,.ts",
-    "lint-docs": "npx alex . && npm run prettier:docs",
+    "lint-docs": "npx -y alex . && npm run prettier:docs",
     "postversion": "git tag $npm_package_version && ./bin/set-major-version-tag.js",
     "prebuild": "rm -rf dist/",
     "prepack": "npm run build",
