ci: fix code coverage in github actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,8 @@ jobs:
       - name: Build dist
         run: npm run build
 
+      - run: mkdir coverage/
+      - run: chmod -R 777 coverage/
       - name: Run tests
         run: npm test
 
