--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Run `openapi:validate` command
         uses: ./rdme-repo/
         with:
-          rdme: openapi:validate oas-examples-repo/3.1/json/petstore.json
+          rdme: validate oas-examples-repo/3.1/json/petstore.json
 
       # Docs: https://rdme-test.readme.io
       - name: Run `openapi` command
