--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
     "validator": "^13.7.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.4.2",
+    "@commitlint/config-conventional": "^17.4.2",
     "@readme/better-ajv-errors": "^1.5.0",
     "@readme/eslint-config": "^10.3.1",
     "@readme/oas-examples": "^5.3.0",
@@ -84,6 +86,7 @@
     "@types/validator": "^13.7.6",
     "ajv": "^8.11.0",
     "eslint": "^8.29.0",
+    "husky": "^8.0.0",
     "jest": "^29.0.3",
     "jest-extended": "^3.0.0",
     "js-yaml": "^4.1.0",
@@ -104,6 +107,7 @@
     "postversion": "git tag $npm_package_version && ./bin/set-major-version-tag.js",
     "prebuild": "rm -rf dist/",
     "prepack": "npm run build",
+    "prepare": "husky install",
     "pretest": "npm run lint && npm run lint-docs",
     "prettier": "prettier --list-different \"./**/**.{md,js,ts}\"",
     "prettier:docs": "prettier --list-different \"./**/**.md\"",
@@ -113,6 +117,28 @@
     "release:gh": "gh release create $npm_package_version --draft --generate-notes",
     "test": "jest --coverage",
     "version": "npm run release && git add CHANGELOG.md"
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ],
+    "rules": {
+      "body-max-line-length": [
+        0,
+        "always",
+        "Infinity"
+      ],
+      "footer-max-line-length": [
+        0,
+        "always",
+        "Infinity"
+      ],
+      "scope-case": [
+        2,
+        "never",
+        "upper-case"
+      ]
+    }
   },
   "prettier": "@readme/eslint-config/prettier"
 }
