--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
       - next
-      - semantic-release
+      - semantic-release # TODO: remove this
 
 jobs:
   release:
