fix: next channel

--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -1,7 +1,8 @@
 branches:
   - name: main
   - name: semantic-release # TODO: remove this
-    prerelease: true
-  - name: next
-    prerelease: true
+    prerelease: next
+    channel: next
+  # - name: next
+  #   prerelease: true
 # dryRun: true # TODO: remove this
