--- a/package.json
+++ b/package.json
@@ -105,15 +105,11 @@
     "lint": "eslint . bin/rdme --ext .js,.ts",
     "postversion": "git tag $npm_package_version && ./bin/set-major-version-tag.js",
     "prebuild": "rm -rf dist/",
-    "prepack": "npm run build",
     "prepare": "husky install",
     "pretest": "npx alex . && npm run lint && npm run prettier",
     "prettier": "prettier --check .",
-    "preversion": "npm ci && npm run build",
-    "release": "npx conventional-changelog-cli -i CHANGELOG.md -s",
     "release:gh": "gh release create $npm_package_version --draft --generate-notes",
-    "test": "jest --coverage",
-    "version": "npm run release && git add CHANGELOG.md"
+    "test": "jest --coverage"
   },
   "commitlint": {
     "extends": [
