chore: restore dry runs

--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -5,4 +5,4 @@ branches:
     channel: next
   # - name: next
   #   prerelease: true
-# dryRun: true # TODO: remove this
+dryRun: true # TODO: remove this
