chore(temp): disable dry-run

--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -15,4 +15,4 @@ plugins:
       '@semantic-release/git',
       { message: "build(release): 🚀 v${nextRelease.version} release 🦉\n\n${nextRelease.notes}\n[skip ci]" },
     ]
-dryRun: true # TODO: remove this
+# dryRun: true # TODO: remove this
