chore: little bits of cleanup

--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -13,6 +13,6 @@ plugins:
   - '@semantic-release/github'
   - [
       '@semantic-release/git',
-      { message: "build(release): 🚀 v${nextRelease.version} release 🦉\n\n${nextRelease.notes}\n[skip ci]" },
+      { message: "build(release): 🚀 v${nextRelease.version} 🦉\n\n${nextRelease.notes}\n[skip ci]" },
     ]
 # dryRun: true # TODO: remove this
