--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "lint": "eslint . bin/rdme --ext .js,.ts",
     "postversion": "git tag $npm_package_version && ./bin/set-major-version-tag.js",
     "prebuild": "rm -rf dist/",
+    "prepack": "npm run build",
     "prepare": "husky install",
     "pretest": "npx alex . && npm run lint && npm run prettier",
     "prettier": "prettier --check .",
