--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -7,7 +7,10 @@ branches:
   #   prerelease: true
 plugins:
   - '@semantic-release/commit-analyzer'
-  - '@semantic-release/release-notes-generator'
+  - [
+      '@semantic-release/release-notes-generator',
+      { 'writerOpts': { 'commitsSort': ['subject', 'scope'], 'headerPartial': "## What's Changed in {{version}}" } },
+    ]
   - '@semantic-release/changelog'
   - '@semantic-release/npm'
   - '@semantic-release/github'
