Revert "feat: drop duplicative tag"
This reverts commit 4c34207be6acf3b30b6f0b9e3b70722047f52403.

--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "bump": "npm version -m 'build: %s release'",
     "debug": "ts-node src/cli.ts",
     "lint": "eslint . bin/rdme --ext .js,.ts",
-    "postversion": "./bin/set-major-version-tag.js",
+    "postversion": "git tag $npm_package_version && ./bin/set-major-version-tag.js",
     "prebuild": "rm -rf dist/",
     "prepack": "npm run build",
     "prepare": "husky install",
