revert: don't set header for changelog

--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -7,10 +7,7 @@ branches:
   #   prerelease: true
 plugins:
   - '@semantic-release/commit-analyzer'
-  - [
-      '@semantic-release/release-notes-generator',
-      { 'writerOpts': { 'commitsSort': ['subject', 'scope'], 'headerPartial': "## What's Changed" } },
-    ]
+  - ['@semantic-release/release-notes-generator', { 'writerOpts': { 'commitsSort': ['subject', 'scope'] } }]
   - '@semantic-release/changelog'
   - [
       '@semantic-release/git',
