--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -13,6 +13,8 @@ plugins:
       '@semantic-release/git',
       { message: "build(release): 🚀 v${nextRelease.version} 🦉\n\n${nextRelease.notes}\n[skip ci]" },
     ]
+  # `npm` must be after `git` because we need the `prepare`step of the
+  # `git` plugin to go first so it can create the build commit
   - '@semantic-release/npm'
   - '@semantic-release/github'
 # dryRun: true # TODO: remove this
