chore(deps-dev): install @semantic-release/exec

--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@readme/eslint-config": "^10.3.1",
     "@readme/oas-examples": "^5.3.0",
     "@semantic-release/changelog": "^6.0.2",
+    "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@types/command-line-args": "^5.2.0",
     "@types/command-line-usage": "^5.0.2",
