--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   release:
+    if: "!contains(github.event.head_commit.message, '[skip release ci]')"
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
