--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -11,7 +11,13 @@ plugins:
   - '@semantic-release/changelog'
   - [
       '@semantic-release/git',
-      { message: "build(release): 🚀 v${nextRelease.version} 🦉\n\n${nextRelease.notes}\n[skip release ci]" },
+      {
+        # TODO: once docker builds are a thing, we're going to have to manually add the assets
+        # since we're also updating the action.yml file with every release!
+        # Uncomment this line below once those changes are live:
+        # assets: ['action.yml', 'CHANGELOG.md', 'package.json', 'package-lock.json'],
+        message: "build(release): 🚀 v${nextRelease.version} 🦉\n\n${nextRelease.notes}\n[skip release ci]",
+      },
     ]
   # `npm` must be after `git` because we need the `prepare`step of the
   # `git` plugin to go first so it can create the build commit
