--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -19,8 +19,9 @@ plugins:
         message: "build(release): 🚀 v${nextRelease.version} 🦉\n\n${nextRelease.notes}\n[skip release ci]",
       },
     ]
-  # `npm` must be after `git` because we need the `prepare`step of the
-  # `git` plugin to go first so it can create the build commit
+  # `npm` must be after `git` because we need the `prepare`step of the `git` plugin
+  # to execute first so it can create the build commit since we do some add'l tagging
+  # in the `postversion` npm hook
   - '@semantic-release/npm'
   # Lightweight alternative to `@semantic-release/github` that just creates a draft release
   - ['@semantic-release/exec', { 'publishCmd': 'gh release create ${nextRelease.version} --draft --generate-notes' }]
