revert: ugh here we go again
This reverts commit 1b547dc666e2b3deeca9db8554b23f32075782e4.

--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -1,4 +1,10 @@
-branches: [main, next]
+branches:
+  - name: main
+  - name: semantic-release # TODO: remove this
+    prerelease: next
+    channel: next
+  # - name: next
+  #   prerelease: true
 plugins:
   - '@semantic-release/commit-analyzer'
   - ['@semantic-release/release-notes-generator', { 'writerOpts': { 'commitsSort': ['subject', 'scope'] } }]
@@ -19,3 +25,4 @@ plugins:
   - '@semantic-release/npm'
   # Lightweight alternative to `@semantic-release/github` that creates a draft release
   - ['@semantic-release/exec', { 'publishCmd': 'gh release create ${nextRelease.version} --draft --generate-notes' }]
+# dryRun: true # TODO: remove this
