fix: turns out these rules weren't redundant
This reverts commit b28c936dfd69464c32b38e7cd4e011214579db3b.

--- a/package.json
+++ b/package.json
@@ -115,7 +115,24 @@
   "commitlint": {
     "extends": [
       "@commitlint/config-conventional"
-    ]
+    ],
+    "rules": {
+      "body-max-line-length": [
+        0,
+        "always",
+        "Infinity"
+      ],
+      "footer-max-line-length": [
+        0,
+        "always",
+        "Infinity"
+      ],
+      "scope-case": [
+        2,
+        "never",
+        "upper-case"
+      ]
+    }
   },
   "prettier": "@readme/eslint-config/prettier"
 }
