--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   release:
-    if: "!contains(github.event.head_commit.message, '[skip release ci]')"
+    if: "!contains(github.event.head_commit.message, 'skip release')"
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
