chore: cleanup + cache

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,3 @@
-name: Release
 on:
   push:
     branches:
@@ -11,17 +10,16 @@ jobs:
     if: "!contains(github.event.head_commit.message, 'skip release')"
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: 16
+          cache: 'npm'
       - name: Install dependencies and build TS
         run: npm ci && npm run build
-      - name: Release
+      - name: Run semantic-release workflow
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
