chore: use this convention instead
github actions don't appear to run for the merge commit and I don't know why so I'm just gonna have it skip CI entirely in a cleaner platform-native way

https://github.blog/changelog/2021-02-08-github-actions-skip-pull-request-and-push-workflows-with-skip-ci/

--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -19,7 +19,7 @@ plugins:
         # since we're also updating the action.yml file with every release!
         # Uncomment this line below once those changes are live:
         # assets: ['action.yml', 'CHANGELOG.md', 'package.json', 'package-lock.json'],
-        message: "build(release): 🚀 v${nextRelease.version} 🦉\n\n${nextRelease.notes}\n[skip release]",
+        message: "build(release): 🚀 v${nextRelease.version} 🦉\n\n${nextRelease.notes}\n[skip ci]",
       },
     ]
   - [
