--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,8 +10,8 @@ updates:
     labels:
       - dependencies
     commit-message:
-      prefix: chore(deps)
-      prefix-development: chore(deps-dev)
+      prefix: chore(deps-gha)
+      prefix-development: chore(deps-gha-dev)
 
   - package-ecosystem: npm
     directory: '/'
