--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@types/node-fetch": "^2.6.2",
     "@types/parse-link-header": "^2.0.0",
     "@types/pluralize": "^0.0.29",
+    "@types/prettier": "^2.7.2",
     "@types/prompts": "^2.4.2",
     "@types/semver": "^7.3.12",
     "@types/tmp": "^0.2.3",
@@ -102,11 +103,13 @@
     "postversion": "git tag $npm_package_version && ./bin/set-major-version-tag.js",
     "prebuild": "rm -rf dist/",
     "prepack": "npm run build",
-    "pretest": "npx alex . && npm run lint && npm run prettier",
+    "pretest": "npx alex . && npm run lint && npm run prettier && npm run schemas:check",
     "prettier": "prettier --check .",
     "preversion": "npm ci && npm run build",
     "release": "npx conventional-changelog-cli -i CHANGELOG.md -s",
     "release:gh": "gh release create $npm_package_version --draft --generate-notes",
+    "schemas:check": "./bin/json-schema-store.js",
+    "schemas:write": "./bin/json-schema-store.js --update",
     "test": "jest --coverage",
     "version": "npm run release && git add CHANGELOG.md"
   },
