chore: update JSON schema for github workflow files (#760)
* chore: update JSON schema for github workflow files

* ci: add check for json schema store

* fix: formatting

* revert: remove declared module? why did i need this before?

* revert: don't install @types/prettier

* refactor: resolve prettier config instead of directly loading it

--- a/package.json
+++ b/package.json
@@ -102,11 +102,13 @@
     "postversion": "git tag $npm_package_version && ./bin/set-major-version-tag.js",
     "prebuild": "rm -rf dist/",
     "prepack": "npm run build",
-    "pretest": "npx alex . && npm run lint && npm run prettier",
+    "pretest": "npx alex . && npm run lint && npm run prettier && npm run schemas:check",
     "prettier": "prettier --check .",
     "preversion": "npm ci && npm run build",
     "release": "npx conventional-changelog-cli -i CHANGELOG.md -s",
     "release:gh": "gh release create $npm_package_version --draft --generate-notes",
+    "schemas:check": "./bin/json-schema-store.js",
+    "schemas:write": "./bin/json-schema-store.js --update",
     "test": "jest --coverage",
     "version": "npm run release && git add CHANGELOG.md"
   },
